--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
             <i class="fas fa-bars"></i>
         </button>
     </header>
-
     <!-- end navigationbar -->
     <!-- start hero section  -->
     <section id="hero-section" class="background-prop">
@@ -256,7 +255,7 @@
             <div class="row no-gutters">
                 <div class="col-lg-3 col-md-4">
                     <div class="portfolio-items">
-                        <a href="./images/portfolio/2.PNG"   data-lightbox="image-1" data-title="eherwood oak gardens" >
+                        <a href="./images/portfolio/2.PNG" data-lightbox="image-1" data-title="eherwood oak gardens">
                             <img src="./images/portfolio/2-.PNG" alt="" class="img-fluid">
                             <div class="overlay">
                                 <h5>eherwood oak gardens</h5>
@@ -286,7 +285,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4">
                     <div class="portfolio-items">
-                        <a href="./images/portfolio/18.PNG"  data-lightbox="image-1" data-title="inverness">
+                        <a href="./images/portfolio/18.PNG" data-lightbox="image-1" data-title="inverness">
                             <img src="./images/portfolio/18-.PNG" alt="">
                             <div class="overlay">
                                 <h5>inverness</h5>
@@ -296,7 +295,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4">
                     <div class="portfolio-items">
-                        <a href="./images/portfolio/20.PNG"  data-lightbox="image-1" data-title="tree corners">
+                        <a href="./images/portfolio/20.PNG" data-lightbox="image-1" data-title="tree corners">
                             <img src="./images/portfolio/20-.PNG" alt="">
                             <div class="overlay">
                                 <h5>tree corners</h5>
@@ -306,7 +305,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4">
                     <div class="portfolio-items">
-                        <a href="./images/portfolio/22.PNG"  data-lightbox="image-1" data-title="lo'occitane">
+                        <a href="./images/portfolio/22.PNG" data-lightbox="image-1" data-title="lo'occitane">
                             <img src="./images/portfolio/22-.PNG" alt="">
                             <div class="overlay">
                                 <h5>lo'occitane</h5>
@@ -316,7 +315,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4">
                     <div class="portfolio-items">
-                        <a href="./images/portfolio/23.PNG"  data-lightbox="image-1" data-title="tory burch galeries">
+                        <a href="./images/portfolio/23.PNG" data-lightbox="image-1" data-title="tory burch galeries">
                             <img src="./images/portfolio/23-.PNG" alt="">
                             <div class="overlay">
                                 <h5>tory burch galeries</h5>
@@ -326,7 +325,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4">
                     <div class="portfolio-items">
-                        <a href="./images/portfolio/26.PNG"  data-lightbox="image-1" data-title="member lines decoration">
+                        <a href="./images/portfolio/26.PNG" data-lightbox="image-1" data-title="member lines decoration">
                             <img src="./images/portfolio/26-.PNG" alt="">
                             <div class="overlay">
                                 <h5>member lines decoration</h5>
@@ -417,11 +416,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <div class="mangar-info" >
+                    <div class="mangar-info">
                         <img src="./images/mangars/manager1.PNG" alt="">
                         <div class="mangar-name text-center">
-                            <h5 >
-                                nidal ghandour
+                            <h5 class="mt-3">
+                                <a href="manager.html">nidal ghandour</a>
                             </h5>
                             <p>managing director</p>
                             <p class="social-media">
@@ -445,7 +444,9 @@
                     <div class="mangar-info">
                         <img src="./images/mangars/manager2.PNG" alt="">
                         <div class="mangar-name text-center">
-                            <h5>nidal ayal</h5>
+                            <h5 class="mt-3">
+                                <a href="manager.html">nidal ayal</a>
+                            </h5>
                             <p>commerical director</p>
                             <p class="social-media">
                                 <a href="#">
@@ -468,7 +469,10 @@
                     <div class="mangar-info">
                         <img src="./images/mangars/manager3.PNG" alt="">
                         <div class="mangar-name text-center">
-                            <h5>iftekhar sayed</h5>
+                            <h5 class="mt-3">
+                                <a href="manager.html">iftekhar sayed</a>
+
+                            </h5>
                             <p>projects director</p>
                             <p class="social-media">
                                 <a href="#">
@@ -492,95 +496,99 @@
 
     </section>
     <!-- end our team section -->
-
-    <!-- start footer -->
+    <!-- website map -->
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d729.5622622558366!2d53.70349269424234!3d23.619142888380868!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e676879d867ac9d%3A0x84709ee1ea9afbbc!2sEverGreen%20fresh%20fruits%20and%20veg!5e0!3m2!1sen!2seg!4v1593290304852!5m2!1sen!2seg"
+        width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     <footer id="footer-section" class="sections_padding">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="about-us__footer">
-                        <img src="./images/logo.PNG" alt="logo">
-                        <p class="base-color">
-                            'black stone' is an awars-winning and dynamic project &
-                            cost management consultancy. providing a high
-                            quality. value for money, fully tailored service to clients
-                            across all sectors throughout the mena region and beyond.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="footer-links pt-4">
-                        <h3 class="pb-3">useful links</h3>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item pl-0">
-                                <i class="fas fa-angle-right mr-1"></i>
-                                home
-                            </li>
-                            <li class="list-group-item pl-0">
-                                <i class="fas fa-angle-right mr-1"></i>
-                                about us
-                            </li>
-                            <li class="list-group-item pl-0">
-                                <i class="fas fa-angle-right mr-1"></i>
-                                services
-                            </li>
-                            <li class="list-group-item pl-0">
-                                <i class="fas fa-angle-right mr-1"></i>
-                                portofolio
-                            </li>
-                            <li class="list-group-item pl-0">
-                                <i class="fas fa-angle-right mr-1"></i>
-                                client
-                            </li>
-                        </ul>
 
+        <!-- start footer -->
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="about-us__footer">
+                            <img src="./images/logo.PNG" alt="logo">
+                            <p class="base-color">
+                                'black stone' is an awars-winning and dynamic project &
+                                cost management consultancy. providing a high
+                                quality. value for money, fully tailored service to clients
+                                across all sectors throughout the mena region and beyond.
+                            </p>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="footer-links pt-4">
-                        <h3 class="pb-3">contact us</h3>
-                        <p class="address mt-3">A108 Adam Street
-                            New York, NY 535022
-                            United States
-                        </p>
-                        <p>
-                            <span>Phone:</span>+1 5589 55488 55
-                        </p>
-                        <p>
-                            <span>Email:</span>info@example.com
-                        </p>
-                        <p class="social-media pt-3">
-                            <a href="#">
-                                <i class="fab fa-facebook-f"></i>
-                            </a>
-                            <a href="#">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                            <a href="#">
-                                <i class="fab fa-google-plus-g"></i>
-                            </a>
-                            <a href="#">
-                                <i class="fab fa-linkedin-in"></i>
-                            </a>
-                        </p>
+                    <div class="col-md-4">
+                        <div class="footer-links pt-4">
+                            <h3 class="pb-3">useful links</h3>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item pl-0">
+                                    <i class="fas fa-angle-right mr-1"></i>
+                                    home
+                                </li>
+                                <li class="list-group-item pl-0">
+                                    <i class="fas fa-angle-right mr-1"></i>
+                                    about us
+                                </li>
+                                <li class="list-group-item pl-0">
+                                    <i class="fas fa-angle-right mr-1"></i>
+                                    services
+                                </li>
+                                <li class="list-group-item pl-0">
+                                    <i class="fas fa-angle-right mr-1"></i>
+                                    portofolio
+                                </li>
+                                <li class="list-group-item pl-0">
+                                    <i class="fas fa-angle-right mr-1"></i>
+                                    client
+                                </li>
+                            </ul>
+
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="footer-links pt-4">
+                            <h3 class="pb-3">contact us</h3>
+                            <p class="address mt-3">A108 Adam Street
+                                New York, NY 535022
+                                United States
+                            </p>
+                            <p>
+                                <span>Phone:</span>+1 5589 55488 55
+                            </p>
+                            <p>
+                                <span>Email:</span>info@example.com
+                            </p>
+                            <p class="social-media pt-3">
+                                <a href="#">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-instagram"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-google-plus-g"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </footer>
-    <!-- end footer -->
-    <a href="#" id="arrow">
-        <i class="fas fa-chevron-up"></i>
-    </a>
-    <script src="./js/jquery-3.5.1.min.js"></script>
-    <script src="./js/popper.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <script src="./js/owl.carousel.js"></script>
-    <script src="./js/all.min.js"></script>
-    <script src="./js/jquery.magnific-popup.min.js"></script>
-    <script src="./js/lightbox.js"></script>
-    <script src="./js/wow.min.js"></script>
-    <script src="./js/script.js"></script>
+        </footer>
+        <!-- end footer -->
+        <a href="#" id="arrow">
+            <i class="fas fa-chevron-up"></i>
+        </a>
+        <script src="./js/jquery-3.5.1.min.js"></script>
+        <script src="./js/popper.js"></script>
+        <script src="./js/bootstrap.min.js"></script>
+        <script src="./js/owl.carousel.js"></script>
+        <script src="./js/all.min.js"></script>
+        <script src="./js/jquery.magnific-popup.min.js"></script>
+        <script src="./js/lightbox.js"></script>
+        <script src="./js/wow.min.js"></script>
+        <script src="./js/script.js"></script>
 </body>
 
 </html>
