--- a/manager.html
+++ b/manager.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/all.min.css">
+    <link rel="stylesheet" href="./css/animate.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/maneger.css">
 </head>
@@ -17,25 +18,25 @@
 
             <ul class="nav flex-column mt-5">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">home</a>
+                    <a class="nav-link active" href="index.html#hero-section">home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="index.html#mission-vision">about us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">services</a>
+                    <a class="nav-link" href="index.html#services_section">services</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">portfolio</a>
+                    <a class="nav-link" href="index.html#portofolio">portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">our manger</a>
+                    <a class="nav-link" href="index.html#our-client">our client</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">our client</a>
+                    <a class="nav-link" href="index.html#our-team">our team</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">contact us</a>
+                    <a class="nav-link" href="index.html#footer-section">contact us</a>
                 </li>
 
             </ul>
@@ -45,11 +46,12 @@
         </button>
     </header>
 
+
     <!-- end navigationbar -->
     <!-- start hero section  -->
     <section id="hero-section" class="background-prop">
         <div class="overlay text-center">
-            <h2 class="mb-2 first">black stone international</h2>
+            <h1 class="mb-2 first wow fadeInUp" data-duration="2s" data-delay=".5s" >our team</h1>
             <p class="first">interior fit-out and maintenance</p>
         </div>
     </section>
@@ -188,6 +190,7 @@ The contracting and general maintenance business in the United States is always 
     <script src="./js/popper.js"></script>
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/all.min.js"></script>
+    <script src="./js/wow.min.js"></script>
     <script src="./js/script.js"></script>
 </body>
 </html>
