--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Black stone</title>
 
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/owl.carousel.css">
-    <link rel="stylesheet" href="./css/all.min.css">
-    <link rel="stylesheet" href="./css/magnific-popup.css">
-    <link rel="stylesheet" href="./css/lightbox.css">
-    <link rel="stylesheet" href="./css/animate.min.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/owl.carousel.css">
+    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/magnific-popup.css">
+    <link rel="stylesheet" href="css/lightbox.css">
+    <link rel="stylesheet" href="css/animate.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -56,7 +56,7 @@
         <div class="overlay text-center">
             <h1 class="mb-2 first">black stone international</h1>
             <p class="first">interior fit-out and maintenance</p>
-            <img src="./images/logo.PNG" alt="logo">
+            <img src="images/logo.PNG" alt="logo">
         </div>
     </section>
     <!-- end hero section  -->
@@ -114,7 +114,7 @@
                     <!-- gympsum ceiling works service -->
                     <div class="item ">
                         <div class="card ml-3 mr-3">
-                            <img src="./images/services/service3.jpg" class="card-img-top" alt="...">
+                            <img src="images/services/service3.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">gympsum ceiling works</h3>
                                     <p class="card-text">
@@ -127,7 +127,7 @@
                     <!--doors & partitions service  -->
                     <div class="item ">
                         <div class="card ml-3 mr-3">
-                            <img src="./images/services/service2.jpg" class="card-img-top" alt="...">
+                            <img src="images/services/service2.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">doors & partitions</h3>
                                     <p class="card-text">
@@ -140,7 +140,7 @@
                     <!-- silicone & sealant service -->
                     <div class="item ">
                         <div class="card ml-3 mr-3">
-                            <img src="./images/services/service5.jpg" class="card-img-top" alt="silicone & sealant.">
+                            <img src="images/services/service5.jpg" class="card-img-top" alt="silicone & sealant.">
                             <div class="card-body">
                                 <h5 class="card-title">silicone & sealant</h3>
                                     <p class="card-text">
@@ -153,7 +153,7 @@
                     <!-- internal furniture transport service -->
                     <div class="item ">
                         <div class="card ml-3 mr-3 ">
-                            <img src="./images/services/service1.jpg" class="card-img-top" alt="...">
+                            <img src="images/services/service1.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">internal furniture transport</h3>
                                     <p class="card-text">
@@ -166,7 +166,7 @@
                     <!-- electrical services -->
                     <div class="item ">
                         <div class="card ml-3 mr-3">
-                            <img src="./images/services/service7.jpg" class="card-img-top" alt="electrical services">
+                            <img src="images/services/service7.jpg" class="card-img-top" alt="electrical services">
                             <div class="card-body">
                                 <h5 class="card-title">electrical services</h3>
                                     <p class="card-text">
@@ -179,7 +179,7 @@
                     <!-- alignment & adjustments service -->
                     <div class="item ">
                         <div class="card ml-3 mr-3">
-                            <img src="./images/services/service4.jpg" class="card-img-top" alt="alignment & adjustments">
+                            <img src="images/services/service4.jpg" class="card-img-top" alt="alignment & adjustments">
                             <div class="card-body">
                                 <h5 class="card-title">alignment & adjustments</h3>
                                     <p class="card-text">
@@ -192,7 +192,7 @@
                     <!-- fixed and loose furnitue service -->
                     <div class="item ">
                         <div class="card ml-3 mr-3">
-                            <img src="./images/services/service6.jpg" class="card-img-top" alt="fixed and loose furnitue">
+                            <img src="images/services/service6.jpg" class="card-img-top" alt="fixed and loose furnitue">
                             <div class="card-body">
                                 <h5 class="card-title">fixed and loose furnitue</h3>
                                     <p class="card-text">
@@ -205,7 +205,7 @@
                     <!-- upholstery services -->
                     <div class="item ">
                         <div class="card ml-3 mr-3">
-                            <img src="./images/services/service8.jpg" class="card-img-top" alt="upholstery">
+                            <img src="images/services/service8.jpg" class="card-img-top" alt="upholstery">
                             <div class="card-body">
                                 <h5 class="card-title">upholstery</h3>
                                     <p class="card-text">
@@ -255,8 +255,8 @@
             <div class="row no-gutters">
                 <div class="col-lg-3 col-md-4">
                     <div class="portfolio-items">
-                        <a href="./images/portfolio/2.PNG" data-lightbox="image-1" data-title="eherwood oak gardens">
-                            <img src="./images/portfolio/2-.PNG" alt="" class="img-fluid">
+                        <a href="images/portfolio/2.PNG" data-lightbox="image-1" data-title="eherwood oak gardens">
+                            <img src="images/portfolio/2-.PNG" alt="" class="img-fluid">
                             <div class="overlay">
                                 <h5>eherwood oak gardens</h5>
                             </div>
@@ -265,8 +265,8 @@
                 </div>
                 <div class="col-lg-3 col-md-4">
                     <div class="portfolio-items">
-                        <a href="./images/portfolio/14.PNG" data-lightbox="image-1" data-title="river crest">
-                            <img src="./images/portfolio/14-.PNG" alt="" class="img-fluid">
+                        <a href="images/portfolio/14.PNG" data-lightbox="image-1" data-title="river crest">
+                            <img src="images/portfolio/14-.PNG" alt="" class="img-fluid">
                             <div class="overlay">
                                 <h5>river crest</h5>
                             </div>
@@ -275,8 +275,8 @@
                 </div>
                 <div class="col-lg-3 col-md-4">
                     <div class="portfolio-items">
-                        <a href="./images/portfolio/16.PNG" data-lightbox="image-1" data-title="del monte">
-                            <img src="./images/portfolio/16-.PNG" alt="">
+                        <a href="images/portfolio/16.PNG" data-lightbox="image-1" data-title="del monte">
+                            <img src="images/portfolio/16-.PNG" alt="">
                             <div class="overlay">
                                 <h5>del monte</h5>
                             </div>
@@ -285,8 +285,8 @@
                 </div>
                 <div class="col-lg-3 col-md-4">
                     <div class="portfolio-items">
-                        <a href="./images/portfolio/18.PNG" data-lightbox="image-1" data-title="inverness">
-                            <img src="./images/portfolio/18-.PNG" alt="">
+                        <a href="images/portfolio/18.PNG" data-lightbox="image-1" data-title="inverness">
+                            <img src="images/portfolio/18-.PNG" alt="">
                             <div class="overlay">
                                 <h5>inverness</h5>
                             </div>
@@ -295,8 +295,8 @@
                 </div>
                 <div class="col-lg-3 col-md-4">
                     <div class="portfolio-items">
-                        <a href="./images/portfolio/20.PNG" data-lightbox="image-1" data-title="tree corners">
-                            <img src="./images/portfolio/20-.PNG" alt="">
+                        <a href="images/portfolio/20.PNG" data-lightbox="image-1" data-title="tree corners">
+                            <img src="images/portfolio/20-.PNG" alt="">
                             <div class="overlay">
                                 <h5>tree corners</h5>
                             </div>
@@ -305,8 +305,8 @@
                 </div>
                 <div class="col-lg-3 col-md-4">
                     <div class="portfolio-items">
-                        <a href="./images/portfolio/22.PNG" data-lightbox="image-1" data-title="lo'occitane">
-                            <img src="./images/portfolio/22-.PNG" alt="">
+                        <a href="images/portfolio/22.PNG" data-lightbox="image-1" data-title="lo'occitane">
+                            <img src="images/portfolio/22-.PNG" alt="">
                             <div class="overlay">
                                 <h5>lo'occitane</h5>
                             </div>
@@ -315,8 +315,8 @@
                 </div>
                 <div class="col-lg-3 col-md-4">
                     <div class="portfolio-items">
-                        <a href="./images/portfolio/23.PNG" data-lightbox="image-1" data-title="tory burch galeries">
-                            <img src="./images/portfolio/23-.PNG" alt="">
+                        <a href="images/portfolio/23.PNG" data-lightbox="image-1" data-title="tory burch galeries">
+                            <img src="images/portfolio/23-.PNG" alt="">
                             <div class="overlay">
                                 <h5>tory burch galeries</h5>
                             </div>
@@ -325,8 +325,8 @@
                 </div>
                 <div class="col-lg-3 col-md-4">
                     <div class="portfolio-items">
-                        <a href="./images/portfolio/26.PNG" data-lightbox="image-1" data-title="member lines decoration">
-                            <img src="./images/portfolio/26-.PNG" alt="">
+                        <a href="images/portfolio/26.PNG" data-lightbox="image-1" data-title="member lines decoration">
+                            <img src="images/portfolio/26-.PNG" alt="">
                             <div class="overlay">
                                 <h5>member lines decoration</h5>
                             </div>
@@ -351,56 +351,56 @@
                     <div class="col-lg-3 col-md-6 pr-1 pl-1">
                         <div class="client-logo">
                             <div>
-                                <img src="./images/clients/client1-.png" alt="">
+                                <img src="images/clients/client1-.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 pr-1 pl-1">
                         <div class="client-logo">
                             <div>
-                                <img src="./images/clients/client1-.png" alt="">
+                                <img src="images/clients/client1-.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 pr-1 pl-1">
                         <div class="client-logo">
                             <div>
-                                <img src="./images/clients/client1-.png" alt="">
+                                <img src="images/clients/client1-.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 pr-1 pl-1">
                         <div class="client-logo">
                             <div>
-                                <img src="./images/clients/client1-.png" alt="">
+                                <img src="images/clients/client1-.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 pr-1 pl-1">
                         <div class="client-logo">
                             <div>
-                                <img src="./images/clients/client1-.png" alt="">
+                                <img src="images/clients/client1-.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 pr-1 pl-1">
                         <div class="client-logo">
                             <div>
-                                <img src="./images/clients/client1-.png" alt="">
+                                <img src="images/clients/client1-.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 pr-1 pl-1">
                         <div class="client-logo">
                             <div>
-                                <img src="./images/clients/client1-.png" alt="">
+                                <img src="images/clients/client1-.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 pr-1 pl-1">
                         <div class="client-logo">
                             <div>
-                                <img src="./images/clients/client1-.png" alt="">
+                                <img src="images/clients/client1-.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -417,7 +417,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="mangar-info">
-                        <img src="./images/mangars/manager1.PNG" alt="">
+                        <img src="images/mangars/manager1.PNG" alt="">
                         <div class="mangar-name text-center">
                             <h5 class="mt-3">
                                 <a href="manager.html">nidal ghandour</a>
@@ -442,7 +442,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="mangar-info">
-                        <img src="./images/mangars/manager2.PNG" alt="">
+                        <img src="images/mangars/manager2.PNG" alt="">
                         <div class="mangar-name text-center">
                             <h5 class="mt-3">
                                 <a href="manager.html">nidal ayal</a>
@@ -467,7 +467,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="mangar-info">
-                        <img src="./images/mangars/manager3.PNG" alt="">
+                        <img src="images/mangars/manager3.PNG" alt="">
                         <div class="mangar-name text-center">
                             <h5 class="mt-3">
                                 <a href="manager.html">iftekhar sayed</a>
@@ -497,8 +497,10 @@
     </section>
     <!-- end our team section -->
     <!-- website map -->
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d729.5622622558366!2d53.70349269424234!3d23.619142888380868!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e676879d867ac9d%3A0x84709ee1ea9afbbc!2sEverGreen%20fresh%20fruits%20and%20veg!5e0!3m2!1sen!2seg!4v1593290304852!5m2!1sen!2seg"
-        width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d729.5622622558366!2d53.70349269424234!3d23.619142888380868!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e676879d867ac9d%3A0x84709ee1ea9afbbc!2sEverGreen%20fresh%20fruits%20and%20veg!5e0!3m2!1sen!2seg!4v1593290304852!5m2!1sen!2seg"
+        width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+        tabindex="0"></iframe>
     <footer id="footer-section" class="sections_padding">
 
         <!-- start footer -->
@@ -507,7 +509,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="about-us__footer">
-                            <img src="./images/logo.PNG" alt="logo">
+                            <img src="images/logo.PNG" alt="logo">
                             <p class="base-color">
                                 'black stone' is an awars-winning and dynamic project &
                                 cost management consultancy. providing a high
@@ -580,15 +582,15 @@
         <a href="#" id="arrow">
             <i class="fas fa-chevron-up"></i>
         </a>
-        <script src="./js/jquery-3.5.1.min.js"></script>
-        <script src="./js/popper.js"></script>
-        <script src="./js/bootstrap.min.js"></script>
-        <script src="./js/owl.carousel.js"></script>
-        <script src="./js/all.min.js"></script>
-        <script src="./js/jquery.magnific-popup.min.js"></script>
-        <script src="./js/lightbox.js"></script>
-        <script src="./js/wow.min.js"></script>
-        <script src="./js/script.js"></script>
+        <script src="js/jquery-3.5.1.min.js"></script>
+        <script src="js/popper.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/owl.carousel.js"></script>
+        <script src="js/all.min.js"></script>
+        <script src="js/jquery.magnific-popup.min.js"></script>
+        <script src="js/lightbox.js"></script>
+        <script src="js/wow.min.js"></script>
+        <script src="js/script.js"></script>
 </body>
 
 </html>
