adding services planning

--- a/index.html
+++ b/index.html
@@ -120,123 +120,64 @@
         </div>
     </section>
     <!-- end mission & vision -->
-    <!-- strart our services -->
-    <section id="services_section" class="sections_padding ">
+    <!-- strart our services planning -->
+    <section id="service-planning" class="sections_padding">
         <div class="line-above__header"></div>
-        <h2 class="base-color text-center">our servises</h2>
-        <!-- start carousel of service -->
+        <h2 class="text-center pb-3 base-color">our process</h2>
         <div class="container">
             <div class="row">
-                <div id="owl-demo" class="owl-carousel owl-theme pt-5 ">
-
-                    <!-- gympsum ceiling works service -->
-                    <div class="item ">
-                        <div class="card ml-3 mr-3">
-                            <img src="./images/services/service3.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">gympsum ceiling works</h3>
-                                    <p class="card-text">
-                                        We provide a range of versatile solutions for the repair,
-                                        maintenance and improvement of gypsum ceilings.
-                                    </p>
-                            </div>
+                <div class="col-md-3">
+                    <div class="service-planning__content">
+                        <div class="step__service-planning d-flex flex-row pt-3">
+                            <i class="fas fa-tasks base-color mr-2"></i>
+                            <h4>learning the object</h4>
                         </div>
+                        <p>
+                            throughout our site visits and inspections, our team will be able to suspect and analyze the
+                            problems and
+                            analyze the problems and the works that need to be done in the store .
+                        </p>
                     </div>
-                    <!--doors & partitions service  -->
-                    <div class="item ">
-                        <div class="card ml-3 mr-3">
-                            <img src="./images/services/service2.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">doors & partitions</h3>
-                                    <p class="card-text">
-                                        SERVICE We provide doors to you that have been produced and assembled
-                                        in accordance with regulations.
-                                    </p>
-                            </div>
+                </div>
+                <div class="col-md-3 ">
+                    <div class="service-planning__content">
+                        <div class="step__service-planning d-flex flex-row pt-3">
+                            <i class="far fa-lightbulb base-color mr-2"></i>
+                            <h4>understanding</h4>
                         </div>
+                        <p>
+                            understanding diffrent types of maintenance activites required that go along with preventve
+                            maintenance for each store .
+                        </p>
                     </div>
-                    <!-- silicone & sealant service -->
-                    <div class="item ">
-                        <div class="card ml-3 mr-3">
-                            <img src="./images/services/service5.jpg" class="card-img-top" alt="silicone & sealant.">
-                            <div class="card-body">
-                                <h5 class="card-title">silicone & sealant</h3>
-                                    <p class="card-text">
-                                        We believe that every corner should have the perfect finish.
-                                        we provide the best quality of silicone filling with various color selections.
-                                    </p>
-                            </div>
+                </div>
+                <div class="col-md-3 ">
+                    <div class="service-planning__content">
+                        <div class="step__service-planning d-flex flex-row pt-3">
+                            <i class="far fa-object-group base-color mr-2"></i>
+                            <h4>scheduling</h4>
                         </div>
+                        <p>
+                            understanding diffrent types of maintenance activites required that go along with preventve
+                            maintenance for each store .
+                        </p>
                     </div>
-                    <!-- internal furniture transport service -->
-                    <div class="item ">
-                        <div class="card ml-3 mr-3 ">
-                            <img src="./images/services/service1.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">internal furniture transport</h3>
-                                    <p class="card-text">
-                                        Our expert packing crew will arrive early on the scheduled day and
-                                        will carry out the designated tasks with military precision.
-                                    </p>
-                            </div>
+                </div>
+                <div class="col-md-3 ">
+                    <div class="service-planning__content">
+                        <div class="step__service-planning d-flex flex-row pt-3">
+                            <i class="fab fa-leanpub base-color mr-2"></i>
+                            <h4>effictive studing</h4>
                         </div>
-                    </div>
-                    <!-- electrical services -->
-                    <div class="item ">
-                        <div class="card ml-3 mr-3">
-                            <img src="./images/services/service7.jpg" class="card-img-top" alt="electrical services">
-                            <div class="card-body">
-                                <h5 class="card-title">electrical services</h3>
-                                    <p class="card-text">
-                                        We carry -out a wide-range of work in the repair and general
-                                        maintenance for various types of electrical works .
-                                    </p>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- alignment & adjustments service -->
-                    <div class="item ">
-                        <div class="card ml-3 mr-3">
-                            <img src="./images/services/service4.jpg" class="card-img-top" alt="alignment & adjustments">
-                            <div class="card-body">
-                                <h5 class="card-title">alignment & adjustments</h3>
-                                    <p class="card-text">
-                                        Provided that no visible defects are identified during inspections,
-                                        in the event of greater frequency of use.
-                                    </p>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- fixed and loose furnitue service -->
-                    <div class="item ">
-                        <div class="card ml-3 mr-3">
-                            <img src="./images/services/service6.jpg" class="card-img-top" alt="fixed and loose furnitue">
-                            <div class="card-body">
-                                <h5 class="card-title">fixed and loose furnitue</h3>
-                                    <p class="card-text">
-                                        We care about the small details. As we also know how much
-                                        it is important to all our clients.
-                                    </p>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- upholstery services -->
-                    <div class="item ">
-                        <div class="card ml-3 mr-3">
-                            <img src="./images/services/service8.jpg" class="card-img-top" alt="upholstery">
-                            <div class="card-body">
-                                <h5 class="card-title">upholstery</h3>
-                                    <p class="card-text">
-                                        We provide cleaning services and repairing for any kind of upholstery
-                                        like leather, silk and cotton REPAIRING- Stitching - Cleaning
-                                    </p>
-                            </div>
-                        </div>
+                        <p>
+                            study the effective method of a voiding potential failure of facilities and systems .
+                        </p>
                     </div>
                 </div>
             </div>
+        </div>
     </section>
-    <!-- end our services -->
+    <!-- end our services planning -->
     <!-- start section of what we provide  -->
     <section class="what-provide__section ">
         <div class="overlay"></div>
@@ -563,14 +504,22 @@
                 <div class="col-lg-4">
                     <div class="footer-links pt-4">
                         <h3 class="pb-3">contact us</h3>
-                        <p class="address mt-3">A108 Adam Street
-                            New York, NY 535022
-                            United States
+                        <span class="company-location">usa</span>
+                        <p class="address mb-0">
+                            houston tx, usa
                         </p>
-                        <p>
+                        <p class="mb-0">
                             <span>Phone:</span>+1 5589 55488 55
                         </p>
-                        <p>
+                        <span class="company-location">use</span>
+                        <p class="address mb-0">
+                            united arab emrirates
+                        </p>
+                        <p class="mb-0">
+                            <span>Phone:</span>+1 5589 55488 55
+                        </p>
+
+                        <p class="mb-0">
                             <span>Email:</span>info@example.com
                         </p>
                         <p class="social-media pt-3">
@@ -604,7 +553,6 @@
     <script src="./js/all.min.js"></script>
     <script src="./js/jquery.magnific-popup.min.js"></script>
     <script src="./js/lightbox.js"></script>
-    <!-- <script src="./js/WOW.js"></script> -->
     <script src="./js/script.js"></script>
 </body>
 
