--- a/manager.html
+++ b/manager.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Manager message</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/all.min.css">
     <link rel="stylesheet" href="./css/animate.min.css">
@@ -13,45 +13,62 @@
 </head>
 <body>
     <!-- start navigationbar -->
-    <header>
-        <nav id="header-navbar" class="fixed-top col-md-3 pl-0">
-
-            <ul class="nav flex-column mt-5">
-                <li class="nav-item">
-                    <a class="nav-link active" href="index.html#hero-section">home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html#mission-vision">about us</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html#services_section">services</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html#portofolio">portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html#our-client">our client</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html#our-team">our team</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html#footer-section">contact us</a>
-                </li>
-
-            </ul>
-        </nav>
-        <button type="button" class="btn btn-link" id="navbar-button">
-            <i class="fas fa-bars"></i>
-        </button>
-    </header>
+    <header class="fixed-top">
+            <div class="container">
+                <nav class="navbar navbar-expand-lg p-0 ">
+                    <a class="navbar-brand mr-0" href="index.html">
+                        <img src="./images/logo2.png" alt="" srcset="">
+                    </a>
+                    <button class="navbar-toggler navbar-dark bg-dark" type="button" data-toggle="collapse" data-target="#header-navbar"
+                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-end" id="header-navbar">
+                        <ul class="navbar-nav">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="index.html#hero-section">Home <span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="index.html#mission-vision">about us</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="services.html">services</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#portofolio">portofolio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#our-client">our client</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#our-team">our team</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#footer-section">contact us</a>
+                            </li>
+                            <!-- <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Dropdown link
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                    <a class="dropdown-item" href="#">Action</a>
+                                    <a class="dropdown-item" href="#">Another action</a>
+                                    <a class="dropdown-item" href="#">Something else here</a>
+                                </div>
+                            </li> -->
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </header>
     <!-- end navigationbar -->
     
     <!-- start hero section  -->
-    <section id="hero-section" class="background-prop">
-        <div class="overlay text-center">
-            <h1 class="mb-2 first wow fadeInUp" data-duration="2s" data-delay=".5s" >our team</h1>
-            <p class="first">interior fit-out and maintenance</p>
+    <section id="manager-hero__section" class="background-prop">
+        <div class="overlay">  </div>
+        <div class="hero-section__content text-center">
+            <h1 class="mb-2 " >our team</h1>
         </div>
     </section>
     <!-- end hero section  -->
@@ -107,12 +124,11 @@ The contracting and general maintenance business in the United States is always 
         </div>
     </section>
     <!--end team details -->
-
-    <!-- start footer -->
-    <footer class="sections_padding">
+   <!-- start footer -->
+   <footer id="footer-section" class="sections_padding">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-lg-4">
                     <div class="about-us__footer">
                         <img src="./images/logo.PNG" alt="logo">
                         <p class="base-color">
@@ -123,7 +139,7 @@ The contracting and general maintenance business in the United States is always 
                         </p>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-lg-4">
                     <div class="footer-links pt-4">
                         <h3 class="pb-3">useful links</h3>
                         <ul class="list-group list-group-flush">
@@ -151,17 +167,25 @@ The contracting and general maintenance business in the United States is always 
 
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-lg-4">
                     <div class="footer-links pt-4">
                         <h3 class="pb-3">contact us</h3>
-                        <p class="address mt-3">A108 Adam Street
-                            New York, NY 535022
-                            United States
+                        <span class="company-location">usa</span>
+                        <p class="address mb-0">
+                                houston tx, usa
                         </p>
-                        <p>
+                        <p class="mb-0">
                             <span>Phone:</span>+1 5589 55488 55
                         </p>
-                        <p>
+                        <span class="company-location">use</span>
+                            <p class="address mb-0">
+                                    united arab emrirates
+                            </p>
+                            <p class="mb-0">
+                                <span>Phone:</span>+1 5589 55488 55
+                            </p>
+
+                        <p class="mb-0">
                             <span>Email:</span>info@example.com
                         </p>
                         <p class="social-media pt-3">
@@ -184,7 +208,9 @@ The contracting and general maintenance business in the United States is always 
         </div>
     </footer>
     <!-- end footer -->
-
+    <a href="#" id="arrow">
+            <i class="fas fa-chevron-up"></i>
+        </a>
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/popper.js"></script>
     <script src="./js/bootstrap.min.js"></script>
