--- a/services.html
+++ b/services.html
@@ -7,11 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Black Stone Services</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/owl.carousel.css">
     <link rel="stylesheet" href="./css/all.min.css">
     <link rel="stylesheet" href="./css/magnific-popup.css">
     <link rel="stylesheet" href="./css/lightbox.css">
-
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/services.css">
 
@@ -326,8 +324,6 @@
         </div>
     </section>
     <!-- end services details -->
-
-
     <!-- start footer -->
     <footer id="footer-section" class="sections_padding">
         <div class="container">
@@ -374,14 +370,22 @@
                 <div class="col-lg-4">
                     <div class="footer-links pt-4">
                         <h3 class="pb-3">contact us</h3>
-                        <p class="address mt-3">A108 Adam Street
-                            New York, NY 535022
-                            United States
+                        <span class="company-location">usa</span>
+                        <p class="address mb-0">
+                                houston tx, usa
                         </p>
-                        <p>
+                        <p class="mb-0">
                             <span>Phone:</span>+1 5589 55488 55
                         </p>
-                        <p>
+                        <span class="company-location">use</span>
+                            <p class="address mb-0">
+                                    united arab emrirates
+                            </p>
+                            <p class="mb-0">
+                                <span>Phone:</span>+1 5589 55488 55
+                            </p>
+
+                        <p class="mb-0">
                             <span>Email:</span>info@example.com
                         </p>
                         <p class="social-media pt-3">
@@ -404,14 +408,15 @@
         </div>
     </footer>
     <!-- end footer -->
+    <a href="#" id="arrow">
+        <i class="fas fa-chevron-up"></i>
+     </a>
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/popper.js"></script>
     <script src="./js/bootstrap.min.js"></script>
-    <script src="./js/owl.carousel.js"></script>
     <script src="./js/all.min.js"></script>
     <script src="./js/jquery.magnific-popup.min.js"></script>
     <script src="./js/lightbox.js"></script>
-    <!-- <script src="./js/WOW.js"></script> -->
     <script src="./js/script.js"></script>
 
 </body>
