update navigation bar

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <a class="nav-link" href="#mission-vision">about us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#services_section">services</a>
+                            <a class="nav-link" href="services.html">services</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#portofolio">portofolio</a>
