--- a/manager.html
+++ b/manager.html
@@ -25,7 +25,7 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="header-navbar">
                         <ul class="navbar-nav">
-                            <li class="nav-item active">
+                            <li class="nav-item">
                                 <a class="nav-link" href="index.html#hero-section">Home <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
@@ -35,16 +35,16 @@
                                 <a class="nav-link" href="services.html">services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#portofolio">portofolio</a>
+                                <a class="nav-link" href="index.html#portofolio">portofolio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#our-client">our client</a>
+                                <a class="nav-link" href="index.html">our client</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#our-team">our team</a>
+                                <a class="nav-link active" href="index.html#our-team">our team</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#footer-section">contact us</a>
+                                <a class="nav-link" href="index.html#footer-section">contact us</a>
                             </li>
                             <!-- <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
