--- a/services.html
+++ b/services.html
@@ -33,19 +33,19 @@
                             <a class="nav-link" href="index.html#hero-section">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#mission-vision">about us</a>
+                            <a class="nav-link" href="index.html#mission-vision">about us</a>
                         </li>
                         <li class="nav-item active">
                             <a class="nav-link " href="services.html">services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#portofolio">portofolio</a>
+                            <a class="nav-link" href="index.html#portofolio">portofolio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#our-client">our client</a>
+                            <a class="nav-link" href="index.html#our-client">our client</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#our-team">our team</a>
+                            <a class="nav-link" href="index.html#our-team">our team</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#footer-section">contact us</a>
