update our client section

--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
     <link rel="stylesheet" href="./css/all.min.css">
     <link rel="stylesheet" href="./css/magnific-popup.css">
     <link rel="stylesheet" href="./css/lightbox.css">
-    <!-- <link rel="stylesheet" href="./css/animate.min.css"> -->
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/> -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -78,48 +76,9 @@
         </div>
     </section>
     <!-- end hero section  -->
-    <!-- strat mission&vision -->
-    <section id="mission-vision">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-6 p-0">
-                    <div class="vision-content text-center ">
-                        <div class="line-above__header"></div>
-                        <h2>our vision</h2>
-                        <p class="m-auto w-50">to be the<br /> preferred maintenance service provider of choice
-                            and provide top quality of interiors in the market.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-md-6 p-0">
-                    <!-- background image of vision section -->
-                    <div class="vision-image w-100 h-100 background-prop"></div>
-                    <div class="overlay"></div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6 p-0">
-                    <!-- background image of mission section -->
-                    <div class="mission-image w-100 h-100 background-prop">
-                    </div>
-                    <div class="overlay"></div>
-                </div>
-                <div class="col-md-6 p-0">
-                    <div class="mission-content text-center ">
-                        <div class="line-above__header"></div>
-                        <h2 class="base-color">our mission & values</h2>
-                        <p class="base-color pl-5 pr-5">
-                            to ensure superior service delivery by engaging stakeholders to take
-                            ownership and bulding a sustainable enterprise . our mission is to implement valuble
-                            maners like :honesty, enthics, teamwork, transparency, trust, integrity, mutual respect,
-                            enterpprise ownership, and accountablitiy.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- end mission & vision -->
+    <!-- start about us section -->
+    
+    <!-- end about us section -->
     <!-- strart our services planning -->
     <section id="service-planning" class="sections_padding">
         <div class="line-above__header"></div>
@@ -317,49 +276,49 @@
                     <div class="col-lg-3 col-md-6 pr-1 pl-1">
                         <div class="client-logo">
                             <div>
-                                <img src="./images/clients/client1-.png" alt="">
+                                <img src="./images/clients/client3-.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 pr-1 pl-1">
                         <div class="client-logo">
                             <div>
-                                <img src="./images/clients/client1-.png" alt="">
+                                <img src="./images/clients/client5-.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 pr-1 pl-1">
                         <div class="client-logo">
                             <div>
-                                <img src="./images/clients/client1-.png" alt="">
+                                <img src="./images/clients/client7-.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 pr-1 pl-1">
                         <div class="client-logo">
                             <div>
-                                <img src="./images/clients/client1-.png" alt="">
+                                <img src="./images/clients/client8-.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 pr-1 pl-1">
                         <div class="client-logo">
                             <div>
-                                <img src="./images/clients/client1-.png" alt="">
+                                <img src="./images/clients/client2-.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 pr-1 pl-1">
                         <div class="client-logo">
                             <div>
-                                <img src="./images/clients/client1-.png" alt="">
+                                <img src="./images/clients/client6-.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 pr-1 pl-1">
                         <div class="client-logo">
                             <div>
-                                <img src="./images/clients/client1-.png" alt="">
+                                <img src="./images/clients/client4-.png" alt="">
                             </div>
                         </div>
                     </div>
