--- a/about-us.html
+++ b/about-us.html
@@ -58,14 +58,40 @@
     </header>
     <!-- end navigationbar -->
      <!-- start hero section  -->
-     <section id="hero-service__section" class="background-prop">
+     <section id="hero-aboutUs__section" class="background-prop">
             <div class="overlay"></div>
             <div class="hero-section__content text-center">
-                <h1 class="mb-2 ">service</h1>
-                <p>services details</p>
+                <h1 class="mb-2 ">about us</h1>
+                <p>about company</p>
             </div>
         </section>
         <!-- end hero section  -->
+        <!-- start about us section -->
+        <section id="about-us__wrapper" class="sections_padding">
+            <div class="container">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="about-us__image">
+                                <!-- <img src="images/aboutUs/images.jpg" > -->
+                                <img src="images/aboutUs/3.jpg" >
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="about-us__content mt-3">
+                                <span>about company</span>
+                                <p>
+                                        "Black Stone" is an award-winning and dynamic project & cost management consultancy,
+                                         providing a high quality, value for money, fully tailored service to Clients across all sectors throughout the MENA region, and beyond. 
+                                        </p>
+                                        <p>
+                                            Our knowledgeable and experienced team offers fully tailored solutions that lead our Clients' projects from initial concept right though to operational handover, with continued support. 
+                                        </p>
+                            </div>
+                        </div>
+                    </div>    
+            </div>
+        </section>
+        <!-- end about us section -->
     <!-- strat mission&vision -->
     <section id="mission-vision">
         <div class="container-fluid">
